# coder

./: .dockerignore  .env.coder.example  .env.example  .env.gateway.example  .gitattributes  .gitignore  .releaserc.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md  Taskfile.yaml  install.sh
.cargo/: config.toml
.coder/: config.yaml  index.yaml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  launch.json
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/docker-compose/: .env.example  README.md  docker-compose.yml
examples/kubernetes/: README.md
playground/bug1/src/: main.rs
src/: cli.rs  config.rs  conversation.rs  errors.rs  index.rs  main.rs  prompt.rs  tools.rs  utils.rs
