[package]
name = "coder"
version = "0.1.1-rc.14"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
clap_complete = "4.5.44"
env_logger = "0.11.6"
futures-util = "0.3.31"
ignore = "0.4.23"
inference-gateway-sdk = "0.9.0"
log = "0.4.25"
octocrab = "0.43.0"
openssl = { version = "0.10.70", features = ["vendored"] }
serde = "1.0.217"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
tiktoken-rs = "0.6.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "tokio-macros"] }
uuid = { version = "1.12.1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
tempfile = "3.16.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 16
