[package]
name = "coder"
version = "0.1.4-rc.32"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
clap_complete = "4.5.45"
env_logger = "0.11.6"
futures-util = "0.3.31"
ignore = "0.4.23"
inference-gateway-sdk = "0.9.0"
log = "0.4.26"
octocrab = { version = "0.43.0", default-features = false, features = ["default-client", "rustls", "rustls-ring"] }
openssl = { version = "0.10.71", features = ["vendored"] }
serde = "1.0.218"
serde_json = "1.0.139"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
tiktoken-rs = "0.6.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "tokio-macros"] }
uuid = { version = "1.14.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
serial_test = "3.2.0"
tempfile = "3.17.1"

[build]
jobs = 3

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 16
